--- a/src/scss/_index.scss
+++ b/src/scss/_index.scss
@@ -55,6 +55,7 @@
     align-self: center;
     justify-self: center;
     overflow: hidden;
+    align-items: center;
 
     &__image--right {
       transform: translate(0, 10%);
@@ -75,6 +76,55 @@
       height: 100%;
       transition: transform 0.3s ease-out;
       cursor: pointer;
+    }
+  }
+
+  @media (max-width: 1024px) {
+    grid-template-columns: 5% 1fr 5%;
+    grid-template-rows: 2fr 1fr;
+
+    &__details {
+      grid-column: 2 / 3;
+      grid-row: 2 / 3;
+      text-align: center;
+
+      h1 {
+        font-size: 4.8rem;
+      }
+
+      h2 {
+        font-size: 3.8rem;
+      }
+
+      p {
+        font-size: 2.2rem;
+      }
+    }
+
+    &__hero {
+      grid-column: 2 / 3;
+
+      &__image {
+        height: 500px;
+      }
+    }
+  }
+
+  @media (max-width: 768px) {
+    &__details {
+      h1 {
+        font-size: 3.8rem;
+      }
+
+      h2 {
+        font-size: 2.8rem;
+      }
+    }
+
+    &__hero {
+      &__image {
+        height: 300px;
+      }
     }
   }
 }
