--- a/src/scss/_photo.scss
+++ b/src/scss/_photo.scss
@@ -36,9 +36,7 @@
   width: 90%;
   margin: auto;
   padding: 8rem 0;
-}
 
-.story {
   &__description {
     width: 50%;
 
@@ -53,7 +51,9 @@
       line-height: 1.5;
     }
   }
+}
 
+.story {
   &__profile {
     img {
       width: 300px;
@@ -62,21 +62,6 @@
 }
 
 .work {
-  &__description {
-    width: 50%;
-
-    h3 {
-      font-size: 3.6rem;
-      padding-bottom: 3rem;
-    }
-
-    p {
-      padding: 2rem 0;
-      font-size: 1.8rem;
-      line-height: 1.5;
-    }
-  }
-
   &__gallery {
     display: grid;
     grid-template-columns: repeat(3, 200px);
@@ -84,8 +69,44 @@
 
     img {
       width: 100%;
-      height: 100%;
+      height: 200px;
       object-fit: cover;
     }
   }
+}
+
+@media (max-width: 1024px) {
+  .story,
+  .work {
+    flex-direction: column;
+
+    &__description {
+      width: 100%;
+    }
+  }
+
+  .story {
+    &__profile {
+      img {
+        width: 300px;
+        margin: 0 auto;
+      }
+    }
+  }
+
+  .work {
+    &__gallery {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+
+      img {
+        width: 100%;
+        height: auto;
+        object-fit: cover;
+      }
+    }
+  }
+}
+
+@media (max-width: 768px) {
 }
