Add navigation animation

--- a/src/scss/_index.scss
+++ b/src/scss/_index.scss
@@ -85,12 +85,12 @@
     align-self: end;
 
     h1 {
-      font-size: 6.4rem;
+      font-size: 5.4rem;
       font-weight: 400;
     }
 
     h2 {
-      font-size: 4.2rem;
+      font-size: 3.8rem;
       padding: 2rem 0;
     }
 
@@ -183,6 +183,8 @@
     }
 
     &__hero {
+      height: 300px;
+
       &__image {
         height: 300px;
       }
