--- a/src/scss/_index.scss
+++ b/src/scss/_index.scss
@@ -1,5 +1,5 @@
 .container {
-  background: radial-gradient(rgba(43, 55, 96, 1), rgba(11, 16, 35, 1));
+  background-image: radial-gradient(rgba(43, 55, 96, 1), rgba(11, 16, 35, 1));
 }
 
 .header {
